feat(callback): add callback + start interpreter
